--- a/src/css/common.css
+++ b/src/css/common.css
@@ -7,7 +7,7 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: antiquewhite;
   color: #212121;
   line-height: 1.5;
 }
@@ -15,4 +15,24 @@ body {
 img {
   display: block;
   max-width: 100%;
+}
+
+.timer {
+  margin-top: 55px;
+  margin-left: 400px;
+  display: flex;
+  gap: 35px;
+  line-height: 2;
+  font-weight: 1000;
+  color: goldenrod;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value {
+  font-size: 100px;
 }
